--- a/others/002 BTC交易浅析.md
+++ b/others/002 BTC交易浅析.md
@@ -70,7 +70,10 @@
     约10分钟。
 
 交易确认位：
-    通常需要 6个确认 才能认为交易是最终且不可逆的，大约60分钟。    
+    通常需要6个区块，大约60分钟。
+
+Finalized所需区块数:
+    6个区块    
 ```
 
 #### 交易确认
