--- a/others/003 ETH交易浅析.md
+++ b/others/003 ETH交易浅析.md
@@ -90,6 +90,11 @@
     ETH1.0：通常需要12个区块，大约3分钟。
     ETC：通常需要120个区块，大约26分钟。
     ETH2.0：通常需要32-64个区块，大约6-12分钟。
+
+Finalized所需区块数:
+    ETH1.0：通常需要12个区块，大约3分钟。
+    ETC：通常需要120个区块，大约26分钟。
+    ETH2.0：通常需要64个区块，大约12分钟。
 ```
 
 #### 交易确认
