--- a/others/002 BTC交易浅析.md
+++ b/others/002 BTC交易浅析.md
@@ -66,10 +66,10 @@
         检查链上链接：确认新区块正确链接到前一个区块。
     如果区块有效，全节点会将其添加到本地的区块链中，并继续广播给其他节点。
 
-出块时间：
+出块时间(面试题)：
     约10分钟。
 
-交易确认位：
+交易确认位(面试题)：
     通常需要6个区块，大约60分钟。
 
 Finalized所需区块数:
