--- a/others/003 ETH交易浅析.md
+++ b/others/003 ETH交易浅析.md
@@ -81,12 +81,12 @@
         检查链上链接：确认新区块正确链接到前一个区块。
     如果区块有效，节点会将其添加到本地的区块链中，并继续广播给其他节点。
 
-出块时间：
+出块时间(面试题)：
     ETH1.0：约13到15秒。
     ETC：约13秒。
     ETH2.0：约12秒。
 
-交易确认位：
+交易确认位(面试题)：
     ETH1.0：通常需要12个区块，大约3分钟。
     ETC：通常需要120个区块，大约26分钟。
     ETH2.0：通常需要32-64个区块，大约6-12分钟。
