--- a/courses/001 一些常见名词.md
+++ b/courses/001 一些常见名词.md
@@ -14,6 +14,12 @@
 
 　
 
+**EVM同源链**
+- 以太坊（Ethereum）作为一个开创性的区块链平台，启发并直接或间接影响了许多其他区块链的设计与发展。
+- 这些链通常被称为以太坊的“同源链”或“姊妹链”，它们可能共享相似的技术基础、设计理念或者是在以太坊的基础上进行了改进和扩展。
+
+　
+
 **POS**
 - 全称 Proof of Stake：权益(质押量)证明
 - 共识机制之一，通过验证者（持有一定数量代币的用户，权益就是持有的代币数量）来确认交易并生成新区块。
@@ -201,8 +207,6 @@
 | **风险**          | 高                               | 中                               | 高                               | 低                              |
 | **交易方式**      | 项目方发行代币，用户直接购买     | 通过交易所购买代币              | 在 DEX 上直接购买代币            | 购买股票，成为股东              |
 | **知名代币**      | ETH、EOS、Tezos             | BNB、BTT、OKB              | UNI、SUSHI、CAKE            | 略过              |
-
-　
 
 **BD**
 - 全称 Business Development：商务谈判
