--- a/others/003 ETH交易浅析.md
+++ b/others/003 ETH交易浅析.md
@@ -154,5 +154,5 @@ Microether(Szabo) = 10^12 Wei       // Nick Szabo 他是一位计算机科学家
 Milliether(Finney) = 10^15 Wei      // Hal Finney 他是比特币的早期采用者和支持者，也是密码学领域的重要人物。
 Ether = 10^18 Wei
 
-记忆方式：看门狗(K - M - G)
+记忆方式：看门狗(K - M - G)，哈哈哈
 ```
