--- a/courses/007 合约中使用的结构.md
+++ b/courses/007 合约中使用的结构.md
@@ -58,13 +58,12 @@
     说明：可用的剩余gas量（在早期版本中存在，后续版本中不再使用，因为它已被自动管理）。
 
 
-
+- 针对```msg.sender```举例子（大部分情况下，容易发送的）:
+- 当一个合约直接调用另一个合约的函数时（例如通过合约地址进行外部函数调用），通常```msg.sender```为上下文的本体。
 ```
-// 针对msg.sender 举例子:
-
-// 合约A
+// 合约A（假如，外部账户调用合约A的fooA函数，为程序的发起点）
 function fooA() public {
-    // msg.sender 在此为用户的地址
+    // msg.sender 在此为外部账户的地址
     address sender = msg.sender;  // sender == 0xUser -> (外部地址)
     // 调用合约B的fooB方法
     ContractB(contractB).fooB();
@@ -83,9 +82,29 @@ function fooC() public {
     // msg.sender 在此为合约B的地址
     address sender = msg.sender;  // sender == address(ContractB) -> 合约B的地址
 }
-
 ```
 
+- 针对```msg.sender```举例子（少部分情况下，容易发送的）:
+- 当使用 super 进行函数调用时，不会改变当前的交易上下文或 msg.sender 的值。
+```
+// 合约B
+contract ContractB {
+    function FuncBase() public view returns (address) {
+        return msg.sender; // msg.sender 仍然为 外部账户的地址
+    }
+}
+
+// 合约A（假如，外部账户调用合约A的FuncBase()，为程序发起点）
+contract ContractA is ContractB {
+    function FuncBase() public view returns (address, address) {
+        address senderInA = msg.sender; // msg.sender 外部账户的地址
+        address senderInB = super.FuncBase(); 
+        // 使用 super 进行函数调用时，不会改变当前的交易上下文或 msg.sender 的值。
+        // 它只是在继承链中向上查找并执行父合约的相应函数。
+        return (senderInA, senderInB);
+    }
+}
+```
 
 
 
