msg.sender 的一些补充

--- a/courses/007 合约中使用的结构.md
+++ b/courses/007 合约中使用的结构.md
@@ -84,7 +84,7 @@ function fooC() public {
 }
 ```
 
-- 针对```msg.sender```举例子（少部分情况下，容易发送的）:
+- 针对```msg.sender```举例子（少部分情况下，容易发生的）:
 - 当使用 super 进行函数调用时，不会改变当前的交易上下文或 msg.sender 的值。
 ```
 // 合约B
