msg.sender 的一些补充

--- a/courses/007 合约中使用的结构.md
+++ b/courses/007 合约中使用的结构.md
@@ -58,7 +58,7 @@
     说明：可用的剩余gas量（在早期版本中存在，后续版本中不再使用，因为它已被自动管理）。
 
 
-- 针对```msg.sender```举例子（大部分情况下，容易发送的）:
+- 针对```msg.sender```举例子：
 - 当一个合约直接调用另一个合约的函数时（例如通过合约地址进行外部函数调用），通常```msg.sender```为上下文的本体。
 ```
 // 合约A（假如，外部账户调用合约A的fooA函数，为程序的发起点）
@@ -84,7 +84,7 @@ function fooC() public {
 }
 ```
 
-- 针对```msg.sender```举例子（少部分情况下，容易发生的）:
+- 针对```msg.sender```举例子：
 - 当使用 super 进行函数调用时，不会改变当前的交易上下文或 msg.sender 的值。
 ```
 // 合约B
