--- a/courses/000 概念.md
+++ b/courses/000 概念.md
@@ -55,10 +55,13 @@
 
 **Solidity**
 - Solidity的语法概念最早是由加文·伍德在2014年提出，后期则以Christian Reitwiessner所领导的以太坊团队Solidity接手开发。
-- 该语言是针对以太坊虚拟机（EVM）所设计的四种语言之一（其他的还有Serpent，LLL，Viper（实验中）和Mutan（已弃用））。
+- 该语言是针对以太坊虚拟机（EVM）所设计的四种语言之一，其他的还有Serpent(已弃用)，LLL(极少使用)，Mutan(已弃用)，Vyper(仍活跃)。
 - Solidity是一种静态类型的编程语言，用于开发在EVM上执行的智能合约。 
 - Solidity被编译为可在EVM上执行的字节码。
 - 借由Solidity，开发人员能够编写出可自我执行其欲实现之商业逻辑的应用程序，该程序可被视为一份具权威性且永不可悔改的交易合约。
 - 对已具备程序编辑能力的人而言，编写Solidity的难易度就如同编写一般的编程语言。
 
-
+**Vyper**
+- 定位：为安全性设计的 Python 风格语言，强调简洁性和可审计性。
+- 现状：仍活跃，但市场份额远低于 Solidity，常用于教育或安全敏感项目。
+- 特点：禁用部分 Solidity 的高风险特性（如继承），适合编写简单合约。
