--- a/courses/001.以太坊虚拟机结构.md
+++ b/courses/001.以太坊虚拟机结构.md
@@ -69,6 +69,6 @@
         [ 外部账户（Externally Owned Account）无独立存储空间，仅存储余额（balance）和交易计数器（nonce）]
     
     WorldState 是整个以太坊网络的"账本"：
-        所有节点必须保持一致。每次交易都会更新 WorldState（例如，修改某个合约的存储值），并通过默克尔树（Merkle Trie）结构确保高效验证和一致性。
+        所有节点必须保持一致。每次交易都会更新该"账本"（例如，修改某个合约的存储值），并通过全局的默克尔树结构确保高效验证和一致性。
         该"账本"存储在以太坊的"状态树"中。    
 ```
