--- a/courses/001.以太坊虚拟机结构.md
+++ b/courses/001.以太坊虚拟机结构.md
@@ -1,5 +1,6 @@
 ### 图示记忆
 - ![](../images/EVM结构.png "")
+- ![](../images/EVM结构02.png "")
 
 ### EVM 的结构可以看作一个分层的计算模型，每个部分有明确的分工：
 - ```MachineState``` 是运行时的“动态大脑”，负责指令的即时执行和数据处理（栈、内存、PC、Gas）。
