--- a/courses/002 变量与函数.md
+++ b/courses/002 变量与函数.md
@@ -30,7 +30,7 @@
 　
 
 #### immutable说明(统称：不变量)：
-- 在编译时必须赋值(即，声明的时候)，在合约部署时赋值(即，构造函数)；必须是二者取其一!
+- 要么在编译时必须赋值(即，声明的时候)，要么在合约部署时赋值(即，构造函数的时候)；必须是二者取其一!
 - 读取时，消耗 gas
 - 适用：如合约的初始化参数、合约的部署地址等
 
@@ -43,6 +43,8 @@
 #### 整数类型细说：
 - 不论uint或者int【8位 ~ 256位】【使用字节对齐的方式位数值是8/16/24/32/40/48/56/64/72/80/88/96...........256】【粗暴理解为8的倍数值】
 - 占位字节数【1 ~ 32】
+- int 默认指的是 int256
+- uint 默认指的是 uint256
 
 　
 
@@ -84,7 +86,7 @@
 #### 枚举类型细说：
 - 底层类型是 uint（无符号整数），不能显性的赋值，默认从0开始。
 - 如果枚举的成员数量在256个以内，则底层类型为uint8
-- 如果枚举的成员数量超过256个，则底层类型为uint256(即，uint)
+- 如果枚举的成员数量超过256个，则底层类型为uint256
 - 如果把枚举当作返回值，则类型填枚举名(否则，编译错误)
 - 枚举定义中，切记最后一个值的末尾不能携带"逗号"，必须为空(否则，编译错误)
 - 枚举定义中，末尾的梅花括号不能携带"分号"，必须为空(否则，编译错误)
@@ -157,13 +159,32 @@ function <function name>(<parameter types>) {internal|external|public|private} [
 - 当一个状态变量被声明为public时，编译器会自动生成一个同名的getter函数，这一定非常常见(在区块链浏览器，随便找一个知名合约，查看试试)。
 ![](../images/etherscan_uni_00.png "")
 ![](../images/etherscan_uni_01.png "")
-- 与其他传统编程语言不同的是，合约声明了public变量，外界也无非直接对它进行修改。
+- 与其他传统编程语言不同的是，合约声明了public变量，外界也无非直接访问存储变量本身。
 ```
 // 声明一个mapping
 mapping(address => mapping(address => address)) public getPair;
 
 // 等价于同名的getter函数，如下:
 function getPair(address tokenA, address tokenB) external view returns (address pair);
+
+/////////////////////////////////////////////////////////////////
+
+contract Example {
+    // 编译器自动生成 getter 函数：function myNumber() external view returns (uint256)
+    uint256 public myNumber = 42; 
+ 
+    function readInternally() internal view returns (uint256) {
+        return myNumber; // 直接访问存储变量（无 getter 调用）
+    }
+}
+ 
+// 外部调用方式 
+contract Caller {
+    Example example = new Example();
+    function readNumber() external view returns (uint256) {
+        return example.myNumber();  // 实际调用的是 getter 函数 
+    }
+}
 ```
 - private：只能从本合约内部访问，继承的合约也不能使用。
 - external：只能从合约外部访问（但内部可以通过 ```this.f()``` 来调用，f是函数名，但这种调用方式消耗gas较多，不推荐）。
