--- a/courses/001 一些常见名词.md
+++ b/courses/001 一些常见名词.md
@@ -36,8 +36,23 @@
 　
 
 **ABI**
-- 全称 Application Binary Interface：应用程序二进制接口
+- 全称 ```Application Binary Interface```：应用程序二进制接口
 - 它是智能合约与外部世界交互的接口定义。
+- 外部应用程序（例如，使用 Web3.js）使用合约的 ABI 来构建正确的交易数据，以便与合约的函数进行交互。
+- 类比：可以将 ABI 比作一个餐厅的菜单。菜单列出了餐厅提供的菜品（函数）、每道菜需要的配料（输入参数）、以及你期望得到的结果（输出参数）。
+- 类比：ABI 是合约的“语言”和“说明书”， 告诉外部世界如何与合约进行交互，以及期望得到什么。
+
+　
+
+**calldata**
+- ```calldata``` 是一个只读的数据存储区域，用于存储外部函数调用传递给智能合约的输入数据。
+- 当一个外部账户（EOA）或另一个合约调用一个智能合约的函数时，调用的数据（包括要调用的函数选择器、参数）会被编码并存储在被调用合约的 ```calldata``` 中。
+- 组成: 当调用一个合约函数时，```calldata``` 通常包含以下两部分：
+  - 函数选择器 (```function selector```): 前 4 个字节（8 个十六进制字符）用于标识要调用的函数。
+    这是通过对函数签名（函数名和参数类型）进行 Keccak-256 哈希并取前 4 个字节得到的。
+  - 编码后的参数 (```encoded arguments```): 函数的输入参数根据 ABI 规范进行编码。
+- 类比：可以将 ```calldata``` 比作顾客在餐厅点餐时写在订单上的内容。订单上包含了顾客想点的菜（函数选择器）以及任何额外的要求（编码后的参数）。
+- 类比：```Calldata``` 是外部世界发送给合约的“指令”和“数据”， 包含了要执行哪个函数以及需要提供的参数。
 
 　
 
