--- a/courses/002 变量与函数.md
+++ b/courses/002 变量与函数.md
@@ -30,7 +30,7 @@
 　
 
 #### immutable说明(统称：不变量)：
-- 要么在编译时必须赋值(即，声明的时候)，要么在合约部署时赋值(即，构造函数的时候)；必须是二者取其一!
+- 要么在编译时赋值(即，声明的时候)，要么在合约部署时赋值(即，构造函数的时候)；必须是二者取其一!
 - 读取时，消耗 gas
 - 适用：如合约的初始化参数、合约的部署地址等
 
