--- a/courses/002 变量与函数02_存储位置.md
+++ b/courses/002 变量与函数02_存储位置.md
@@ -37,8 +37,8 @@ contract Example {
 * 数据仅存在于当前函数调用期间。
 * 允许对数据进行修改。
 * gas操作成本相对于 storage 更便宜，因为不涉及到区块链状态的变化。
-#### 其他：
-* 当函数参数是引用类型（如，string、数组或struct）时，它们必须使用memory(或，calldata)关键字进行修饰。
+#### 理解：
+* 当函数参数(或，函数局部变量)，是复杂类型（如，```string、array、struct、bytes```）时，它们必须使用 memory 关键字进行修饰。
 #### 示例:
 ```
 function example(uint[] memory arr) public pure returns (uint sum) {
@@ -71,6 +71,9 @@ function example() public pure {
 * 不复制到内存中，因此节省 gas。
 * 仅限于函数参数，不能用于声明局部变量或状态变量。
 * 在操作复杂数据的前提下，gas操作是最为廉价的。
+#### 理解：
+* 必须是函数参数，参数可以是简单类型、也可以是负责类型。
+* 必须是```external```函数
 #### 示例：
 ```
 function example(uint[] calldata arr) public pure returns (uint sum) {
@@ -96,9 +99,9 @@ function example(Person calldata person) public pure {
 * 自动管理，开发者无需显式指定。
 * 仅存在于当前函数调用期间。
 * gas操作通常是最便宜的，因为它们不需要与持久性存储进行交互。
-#### 其他：
+#### 理解：
 * 每个函数调用的栈深度有限（1024 个槽位），所以存储在栈中的变量不能占用过多空间。
-* 当函数参数(或，局部变量)，它们是复杂类型(即，string、数组或struct)，它们的大小是未知或很大的，也就不适合存储在栈（stack）中。
+* 当函数参数(或，函数局部变量)，是简单类型(```uint、int、uint、address、enum```)，则存储在栈（stack）中。
 #### 示例：
 ```
 function example(uint value) public pure {
@@ -110,3 +113,11 @@ function example() public pure {
     uint value = 0;
 }
 ```
+
+　
+
+------------------------------------------------------------------------------------------------
+### 总结：
+- 合约成员变量，见```storage```
+- 函数参数变量，见```stack -> memroy -> calldata```
+- 函数内局部变量，见```stack -> memroy```
