--- a/courses/004 异常.md
+++ b/courses/004 异常.md
@@ -3,6 +3,7 @@
 #### require：
 - solidity 0.8版本之前抛出异常的常用方法，缺点就是gas随着描述异常的字符串长度增加，比error命令要高
 - 失败时消耗部分 gas：如果条件为假，交易将回滚并恢复到调用之前的状态，退还剩余的 gas，并可以返回自定义错误消息。
+- 交易开始，预支付的Gas费是```gas limit * gas price```，如交易异常时，消耗的Gas量是```a```，那么退还Gas费是```(gas limit - a) * gas price```
 - 适用：业务常规检查判断(通常用于验证输入、权限检查等)
 - 控制台的异常定位，比较明显
 - ```require(amount > 0, "Amount must be greater than zero");```
