--- a/courses/006 事件.md
+++ b/courses/006 事件.md
@@ -1,9 +1,10 @@
 #### 事件（Events）：
-- 是太坊虚拟机上日志的抽象
-- 在太坊虚拟机上，是比较经济的存储数据的方式，每个大概消耗2,000 gas；相比之下，链上存储一个新变量至少需要20,000 gas
+- 事件是太坊虚拟机上日志的抽象。
+- 在太坊虚拟机上，事件是比较经济的存储数据的方式，每个大概消耗2,000 gas；相比之下，链上存储一个新变量至少需要20,000 gas
 - 可以通过客户端（如 Web3.js 或 Ethers.js）进行监听和检索(如，交易的完成、数据的更新等)
-- 参数可以带有indexed关键字，他们会保存在以太坊虚拟机日志的topics中，方便之后检索。
+- 参数可以带有```indexed```关键字，他们会保存在以太坊虚拟机日志的topics中，方便之后检索（调用 eth_getLogs 可指定关键参数，效率高）。
 - 事件的定义，只能在 合约、抽象合约、接口中。
+- 推荐在修改合约变量后，抛出事件。
 
 ##### 简要示例：
 ```
@@ -20,3 +21,33 @@ contract MyContract {
     }
 }
 ```
+
+#### 事件的```Topic``` 示例
+```
+    event Transfer(
+        address indexed from,  // Topic[1]
+        address indexed to,    // Topic[2]
+        uint256 value          // 非indexed，存储在日志的data字段
+    );
+    
+    当 Transfer 事件被触发时：
+        Topic[0]: keccak256("Transfer(address,address,uint256)")
+        Topic[1]: from 地址的哈希值。
+        Topic[2]: to 地址的哈希值。
+        Topic[3]: 未使用（因为只有2个indexed参数）。
+        value 存储在日志的 data 字段（非Topic）。
+    
+    以太坊协议规定，每个日志条目最多只能有 4个Topics。        
+```
+
+#### 触发事件的消耗的```Gas```示例
+```
+    根据以太坊黄皮书（Appendix G），LOG 指令的 Gas 成本公式为：
+        Gas = G_logbase + G_logtopic * num_topics + G_logdata * data_bytes
+    
+        G_logbase = 375 Gas（LOG 指令的基础成本）。
+        G_logtopic = 375 Gas（每个 topic 的成本）。
+        G_logdata = 8 Gas（data 部分的每字节成本）。    
+```
+- 刚刚定义的事件，计算如下：
+- ```375 + 375 * 3 + 8 * 32 = 1756```
