--- a/courses/007 接口.md
+++ b/courses/007 接口.md
@@ -4,7 +4,7 @@
 - 接口不能包含状态变量。
 - 接口不能包含构造函数。
 - 接口不能继承除接口外的其他合约，但接口可以继承于其他接口。
-- 接口所有函数都必须是external且不能有函数体。
+- 接口所有函数都必须是```external```且不能有函数体。
 - 接口内，可以包含事件。
 - 继承接口的非抽象合约，必须实现接口定义的所有功能。
 - 继承接口的抽象合约，可以选择不实现接口的所有函数。
