--- a/courses/002 变量与函数.md
+++ b/courses/002 变量与函数.md
@@ -193,11 +193,12 @@ contract Caller {
 　
 
 #### 函数权限(功能关键字)：
-- payable：可支付(必须是以太币)
-- pure：纯净(不读不写)
+- payable：可支付(必须是以太币)。
+- pure：纯净(不读不写)，要求函数完全独立于区块链环境。
 - view：纯读，读取链上数据，在本地节点(当前连接的节点)上执行，无需广播到整个网络或由矿工验证，因此不需要支付 Gas 费用。
-* 注意，使用emit 事件，也认定为修改了合约状态，即最少使用view，而不是pure
-* 注意，address.call/delegatecall，也认定为可能修改了合约状态，即最少使用view，而不是pure
+* 注意，使用```emit```事件，也认定为修改了合约状态，即最少使用```view```，而不是```pure```。
+* 注意，```address.call/delegatecall```，也认定为可能修改了合约状态，即最少使用```view```，而不是```pure```。
+* 注意，使用```address(this)```，认定为访问合约的身份状态信息，即最少使用```view```，而不是```pure```。
 - 空：(没支付、有写操作)
 
 　
