--- a/courses/007 合约中使用的结构.md
+++ b/courses/007 合约中使用的结构.md
@@ -35,7 +35,7 @@
     msg.sender
     代码类型：属性
     返回类型：address
-    说明：调用合约的地址，通常是外部账户或另一个合约的地址。用于检查权限和身份。
+    说明：调用合约的地址，通常是外部账户或另一个合约的地址。用于检查权限和身份。（有一个反直觉的特例，详见示例）
 
     msg.value
     代码类型：属性
@@ -84,7 +84,7 @@ function fooC() public {
 }
 ```
 
-- 针对```msg.sender```举例子：
+- 针对```msg.sender```举例子（反直觉特例）：
 - 当使用 super 进行函数调用时，不会改变当前的交易上下文或 msg.sender 的值。
 ```
 // 合约B
