--- a/courses/001 通行证与编译器版本.md
+++ b/courses/001 通行证与编译器版本.md
@@ -71,8 +71,8 @@ pragma solidity ^0.7.0 || ^0.8.0;       多个版本范围
 　
 
 #### 其他说明：
-- solidity 0.8.0 版本以及之后的版本，引入了"算术溢出检查"
-
+- ```solidity 0.8.0``` 版本以及之后的版本，引入了"算术溢出检查"
+- ```pragma solidity >0.8.0;``` 尾部的```;```不能掉（Solidity 是语法严格的语言）
 
 
 
