--- a/courses/042 合约中的存储槽02.md
+++ b/courses/042 合约中的存储槽02.md
@@ -6,7 +6,7 @@
 
 #### 示例
 ```
-    contract SeeSlot {
+    contract SeeSlot01 {
         address public aaa;  // slot0 ，20个字节
         uint8 public f;     // slot0，1个字节
         uint256 public a;  // slot1，32个字节
@@ -18,7 +18,7 @@
 
 #### 示例
 ```
-    contract SeeSlot {
+    contract SeeSlot02 {
        struct SlotStruct {
             uint256  a;   // slot0，32个字节
             uint8   b;    // slot1，1个字节 
@@ -36,7 +36,7 @@
 
 #### 示例
 ```
-    contract SeeSlot {
+    contract SeeSlot03 {
         uint256  a0;    // slot0
         struct SlotStruct {
             uint256  a;
@@ -66,7 +66,7 @@
 
 ### 示例
 ```
-    contract SeeSlot {
+    contract SeeSlot04 {
         struct SlotStruct {
             uint256  a;
             uint8    b;
