--- a/courses/042 合约中的存储槽02.md
+++ b/courses/042 合约中的存储槽02.md
@@ -14,6 +14,22 @@
         uint8 public c;    // slot2，1个字节
         uint256 public d;  // slot3，32个字节
     }
+    
+    ╭------+---------+------+--------+-------+------------------------------------╮
+    | Name | Type    | Slot | Offset | Bytes | Contract                           |
+    +=============================================================================+
+    | aaa  | address | 0    | 0      | 20    | src/SeeSlot/SeelSlot.sol:SeeSlot01 |
+    |------+---------+------+--------+-------+------------------------------------|
+    | f    | uint8   | 0    | 20     | 1     | src/SeeSlot/SeelSlot.sol:SeeSlot01 |
+    |------+---------+------+--------+-------+------------------------------------|
+    | a    | uint256 | 1    | 0      | 32    | src/SeeSlot/SeelSlot.sol:SeeSlot01 |
+    |------+---------+------+--------+-------+------------------------------------|
+    | b    | uint8   | 2    | 0      | 1     | src/SeeSlot/SeelSlot.sol:SeeSlot01 |
+    |------+---------+------+--------+-------+------------------------------------|
+    | c    | uint8   | 2    | 1      | 1     | src/SeeSlot/SeelSlot.sol:SeeSlot01 |
+    |------+---------+------+--------+-------+------------------------------------|
+    | d    | uint256 | 3    | 0      | 32    | src/SeeSlot/SeelSlot.sol:SeeSlot01 |
+    ╰------+---------+------+--------+-------+------------------------------------╯    
 ```
 
 #### 示例
@@ -32,6 +48,14 @@
 
     注意：
     结构体本身不占用一个独立的存储槽。结构体的成员会根据它们的类型和声明顺序被打包到存储槽中。
+    
+    ╭------+-----------------------------+------+--------+-------+------------------------------------╮
+    | Name | Type                        | Slot | Offset | Bytes | Contract                           |
+    +=================================================================================================+
+    | aa   | struct SeeSlot02.SlotStruct | 0    | 0      | 96    | src/SeeSlot/SeelSlot.sol:SeeSlot02 |
+    |------+-----------------------------+------+--------+-------+------------------------------------|
+    | dd   | uint256                     | 3    | 0      | 32    | src/SeeSlot/SeelSlot.sol:SeeSlot02 |
+    ╰------+-----------------------------+------+--------+-------+------------------------------------╯    
 ```
 
 #### 示例
@@ -62,6 +86,17 @@
     mmm[123].b -> baseSlot + 1（b为 1 字节）
     mmm[123].c -> baseSlot + 1（b为 1 字节）
     mmm[123].d -> baseSlot + 2（d为 32 字节，独占一个slot）
+    
+
+    ╭------+-------------------------------------------------+------+--------+-------+------------------------------------╮
+    | Name | Type                                            | Slot | Offset | Bytes | Contract                           |
+    +=====================================================================================================================+
+    | a0   | uint256                                         | 0    | 0      | 32    | src/SeeSlot/SeelSlot.sol:SeeSlot03 |
+    |------+-------------------------------------------------+------+--------+-------+------------------------------------|
+    | mmm  | mapping(uint256 => struct SeeSlot03.SlotStruct) | 1    | 0      | 32    | src/SeeSlot/SeelSlot.sol:SeeSlot03 |
+    |------+-------------------------------------------------+------+--------+-------+------------------------------------|
+    | d    | uint256                                         | 2    | 0      | 32    | src/SeeSlot/SeelSlot.sol:SeeSlot03 |
+    ╰------+-------------------------------------------------+------+--------+-------+------------------------------------╯    
 ```
 
 ### 示例
@@ -80,7 +115,7 @@
     }
 
     d：slot0
-    d：slot2
+    e：slot2
     
     Aaaa 的长度信息，存储在 slot1，称之为值1
     
@@ -98,4 +133,14 @@
     Aaaa[1].b -> 3 + baseSlot + 1
     Aaaa[1].c -> 3 + baseSlot + 1
     Aaaa[1].d -> 3 + baseSlot + 2
+    
+    ╭------+-------------------------------+------+--------+-------+------------------------------------╮
+    | Name | Type                          | Slot | Offset | Bytes | Contract                           |
+    +===================================================================================================+
+    | d    | uint256                       | 0    | 0      | 32    | src/SeeSlot/SeelSlot.sol:SeeSlot04 |
+    |------+-------------------------------+------+--------+-------+------------------------------------|
+    | Aaaa | struct SeeSlot04.SlotStruct[] | 1    | 0      | 32    | src/SeeSlot/SeelSlot.sol:SeeSlot04 |
+    |------+-------------------------------+------+--------+-------+------------------------------------|
+    | e    | uint256                       | 2    | 0      | 32    | src/SeeSlot/SeelSlot.sol:SeeSlot04 |
+    ╰------+-------------------------------+------+--------+-------+------------------------------------╯    
 ```
