--- a/courses/043 可升级代理模式.md
+++ b/courses/043 可升级代理模式.md
@@ -212,3 +212,6 @@ contract LogicV2 is LogicV1 {
 - 1.部署LogicV1，使用V1地址来部署Proxy，使用Proxy发起setValue之类的函数调用，来代表用户发起了数据变化的调用，使用Proxy来查看(低级调用)_value等值。
 - 2.部署LogicV2，使用Proxy升级到V2，使用Proxy查看_value等值的数据，理应上一次V1的数据留存下来的，使用Proxy更改_value4，进而查看_value1,_value2,_value3等数据，理应都是完好的。
 
+#### 比喻：
+- 在计算机体系中，"代理合约"相对于"硬盘"，"逻辑合约"相当于"操作系统"
+- 升级"逻辑合约"，相当于升级操作系统，而硬盘（代理合约）中的数据保持不变。
