--- a/courses/008 接收以太币.md
+++ b/courses/008 接收以太币.md
@@ -40,3 +40,6 @@ Ether = 10^18 Wei
 - 示例：```function foo(uint256 _value) public payable```
 
 
+#### 其他：
+- 原生 ETH（以太币）的地址(以太坊地址常量)：
+- ```address public constant ethAddress = address(0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE);```
