--- a/courses/019 ERC20代币.md
+++ b/courses/019 ERC20代币.md
@@ -109,3 +109,101 @@ function _callOptionalReturn(IERC20 token, bytes memory data) private returns (b
 
 ##### 有改进补充的源码：
 - ```contract/TestERC20_Addition.sol```
+
+---------------------------------------------------------------------------------------------
+
+##### 代币合约迁移```Migrate```
+```
+// 新版ERC20合约（简化版，支持mint功能）
+contract NewERC20 {
+    string public name = "New Token";
+    string public symbol = "NTK";
+    uint8 public decimals = 18;
+    uint256 public totalSupply;
+    mapping(address => uint256) public balanceOf;
+    mapping(address => mapping(address => uint256)) public allowance;
+
+    event Transfer(address indexed from, address indexed to, uint256 value);
+    event Approval(address indexed owner, address indexed spender, uint256 value);
+
+    // 仅限迁移合约调用
+    function mint(address account, uint256 amount) external {
+        require(account != address(0), "Invalid address");
+        totalSupply += amount;
+        balanceOf[account] += amount;
+        emit Transfer(address(0), account, amount);
+    }
+
+    function transfer(address recipient, uint256 amount) external returns (bool) {
+        require(balanceOf[msg.sender] >= amount, "Insufficient balance");
+        balanceOf[msg.sender] -= amount;
+        balanceOf[recipient] += amount;
+        emit Transfer(msg.sender, recipient, amount);
+        return true;
+    }
+
+    function approve(address spender, uint256 amount) external returns (bool) {
+        allowance[msg.sender][spender] = amount;
+        emit Approval(msg.sender, spender, amount);
+        return true;
+    }
+
+    function transferFrom(address sender, address recipient, uint256 amount) external returns (bool) {
+        require(balanceOf[sender] >= amount, "Insufficient balance");
+        require(allowance[sender][msg.sender] >= amount, "Insufficient allowance");
+        balanceOf[sender] -= amount;
+        balanceOf[recipient] += amount;
+        allowance[sender][msg.sender] -= amount;
+        emit Transfer(sender, recipient, amount);
+        return true;
+    }
+}
+
+// 迁移合约（不销毁旧代币）
+contract MigrateContract {
+    IERC20 public oldToken; // 旧ERC20合约
+    NewERC20 public newToken; // 新ERC20合约
+    address public immutable owner; // 合约管理员
+
+    event Migrated(address indexed user, uint256 amount);
+
+    constructor(address _oldToken, address _newToken) {
+        oldToken = IERC20(_oldToken);
+        newToken = NewERC20(_newToken);
+        owner = msg.sender; // 设置部署者为管理员
+    }
+
+    // 用户迁移函数
+    function migrate() external {
+        // 获取用户在旧合约中的余额
+        uint256 balance = oldToken.balanceOf(msg.sender);
+        require(balance > 0, "No balance to migrate");
+
+        // 检查用户是否已授权迁移合约
+        uint256 allowance = oldToken.allowance(msg.sender, address(this));
+        require(allowance >= balance, "Insufficient allowance");
+
+        // 从旧合约转移代币到迁移合约（不销毁，也可以改为销毁，即转入address(0)）
+        bool success = oldToken.transferFrom(msg.sender, address(this), balance);
+        require(success, "Transfer from old token failed");
+
+        // 在新合约中为用户铸造等量的代币
+        newToken.mint(msg.sender, balance);
+
+        emit Migrated(msg.sender, balance);
+    }
+
+    // 查询用户可迁移的余额
+    function getMigratableBalance(address user) external view returns (uint256) {
+        return oldToken.balanceOf(user);
+    }
+
+    // 管理员撤回旧代币（可选，用于清理迁移合约中的旧代币）
+    function withdrawOldTokens(address to, uint256 amount) external {
+        require(msg.sender == owner, "Not authorized");
+        require(to != address(0), "Invalid address");
+        bool success = oldToken.transfer(to, amount);
+        require(success, "Withdrawal failed");
+    }
+}
+```
