--- a/courses/034 包装以太币.md
+++ b/courses/034 包装以太币.md
@@ -97,3 +97,36 @@ contract WETH9 {
 
 #### 其他：
 - 由于当时的Solidity版本比较早，所以这个代码中的一些语法比较不一样。
+
+#### 以太坊ETH的地址
+```
+    因为以太坊的原生代币 ETH 并不是一个标准的 ERC-20 代币，所以在需要与 ERC-20 接口兼容的时候，
+    如（DEX、跨链桥协议、DeFi 协议、钱包、支付网关等）。
+    他们会使用这个特殊地址 0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE 来**“模拟” ETH 是一种 ERC-20 代币**，
+    便于统一处理 ETH 和 Token。
+    
+    ///////////////////////////////////////////////////////////////////////////////////////////////
+    
+    address public constant ethAddress = address(0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE);
+    
+    function transfer(address token, uint256 amount) external payable {
+        if (token == ethAddress) {
+            // 处理 ETH 转账
+            payable(msg.sender).transfer(amount);
+        } else {
+            // 处理 ERC20 转账
+            IERC20(token).transfer(msg.sender, amount);
+        }
+    }    
+    
+    // 假设有一个兑换函数，支持 ETH 和 ERC20
+    function swap(address inputToken, address outputToken, uint256 amount) external payable {
+        if (inputToken == ethAddress) {
+            require(msg.value == amount, "ETH amount mismatch");
+        } else {
+            IERC20(inputToken).transferFrom(msg.sender, address(this), amount);
+        }
+        
+        // ... 执行兑换逻辑
+    }    
+```
