--- a/courses/050 重入攻击.md
+++ b/courses/050 重入攻击.md
@@ -187,3 +187,4 @@ contract Attack {
 - 防御原理：编写"禁止重入的修饰器"(```nonReentrant```)，且，规规矩矩提前执行```balanceOf[msg.sender] = 0```(其实，这也符合常见的商业逻辑执行顺序，"先扣用户的钱，再给用户提供利益")。
 - 值得一提的是：在Solidity和以太坊智能合约中，没有传统意义上的多线程机制，而，所有的函数调用都在一个区块链网络的共识机制下顺序执行。
 - 在作恶者"重入攻击"被成功防御的时候，remix测试层面上，会把错误最终体现在"最外围的异常"，也就是```msg.sender.call```的执行下一行，即```require(success, "Failed to send Ether")```；并没有直接在```revert ReentrancyGuardReentrantCall()```错误处异常哦。
+- 防御逻辑：```Checks-Effects-Interactions (CEI) 模式```，先检查修改状态，再进行转账，最后交互！
