--- a/courses/046 通用可升级代理模式.md
+++ b/courses/046 通用可升级代理模式.md
@@ -207,4 +207,6 @@ contract LogicV2 is LogicV1 {
 - 通用可升级代理模式的缺点：更复杂，因为逻辑合约承载了更多功能。
 - 适用：适合资源受限、对升级需求简单的项目，在降低成本的同时提供升级的灵活性。
 
-![](../images/proxyMode_Compare.png "")
+- ![](../images/proxyMode_Compare.png "")
+- ![](../images/日期/PixPin_20250422_005201.png "")
+- ![](../images/日期/PixPin_20250422_005443.png "")
