--- a/courses/042 合约中的存储槽02.md
+++ b/courses/042 合约中的存储槽02.md
@@ -144,3 +144,32 @@
     | e    | uint256                       | 2    | 0      | 32    | src/SeeSlot/SeelSlot.sol:SeeSlot04 |
     ╰------+-------------------------------+------+--------+-------+------------------------------------╯    
 ```
+
+### 示例（特殊）
+```
+    contract SeeSlot05 {
+        uint256 public immutable zero1;
+        uint256 public constant zero2 = 0;
+        uint256 public a;
+        address public b;
+        bytes32 public c;
+        bytes1 public d;
+    }
+
+    immutable变量：该变量会在部署时，存储在合约字节码中，而不是运行时存储（storage）中。
+    constant变量：该变量会编译时就已确定，并直接嵌入到合约的字节码中，而不是运行时存储（storage）中。
+    
+    最小代理的proxy，就是使用的immutable，来存储逻辑合约地址的。（即，不破坏双边合约之间的共享槽）
+   
+    ╭------+---------+------+--------+-------+------------------------------------╮
+    | Name | Type    | Slot | Offset | Bytes | Contract                           |
+    +=============================================================================+
+    | a    | uint256 | 0    | 0      | 32    | src/SeeSlot/SeelSlot.sol:SeeSlot05 |
+    |------+---------+------+--------+-------+------------------------------------|
+    | b    | address | 1    | 0      | 20    | src/SeeSlot/SeelSlot.sol:SeeSlot05 |
+    |------+---------+------+--------+-------+------------------------------------|
+    | c    | bytes32 | 2    | 0      | 32    | src/SeeSlot/SeelSlot.sol:SeeSlot05 |
+    |------+---------+------+--------+-------+------------------------------------|
+    | d    | bytes1  | 3    | 0      | 1     | src/SeeSlot/SeelSlot.sol:SeeSlot05 |
+    ╰------+---------+------+--------+-------+------------------------------------╯    
+```
