--- a/courses/045 透明代理模式.md
+++ b/courses/045 透明代理模式.md
@@ -235,3 +235,21 @@ contract LogicV2 is LogicV1 {
 - 随着智能合约应用的发展，社区意识到需要一种更简单、更标准的方式来处理合约升级问题。因此提出了UUPS，它将升级逻辑内置到实现合约中，简化了升级流程。
 
 
+
+#### 透明代理 - ```OpenZeppelin```
+```
+    代理合约：
+        [TransparentUpgradeableProxy:ERC1967Proxy:Proxy]
+            1. 使用高位存储槽，存储 newImplementation（即，逻辑合约地址）
+            2. 与逻辑合约共享低位存储槽
+            3. 逻辑fallback转发]
+        [ProxyAdmin]
+            1. 可自由使用存储槽
+            2. 升级逻辑
+        
+    逻辑合约：
+        [LogicV1]
+            1. 无额外继承关系
+            2. 定义变量与逻辑
+            3. 自身存储槽，属于无用信息
+```
