--- a/courses/046 通用可升级代理模式.md
+++ b/courses/046 通用可升级代理模式.md
@@ -210,3 +210,21 @@ contract LogicV2 is LogicV1 {
 - ![](../images/proxyMode_Compare.png "")
 - ![](../images/日期/PixPin_20250422_005201.png "")
 - ![](../images/日期/PixPin_20250422_005443.png "")
+
+
+
+#### 通用可升级代理 - ```OpenZeppelin```
+```
+    代理合约：
+        [ERC1967Proxy:Proxy]
+            1. 使用高位存储槽，存储 newImplementation（即，逻辑合约地址）
+            2. 与逻辑合约共享低位存储槽
+            3. 逻辑fallback转发] 
+                    
+    逻辑合约：
+        [LogicV1:UUPSUpgradeable]
+            1. 继承自 UUPSUpgradeable
+            2. 升级逻辑（从proxy发起，fallback-delegate-implementation，最终把"逻辑合约地址"写入到proxy自身的高位槽）
+            2. 定义变量与逻辑
+            3. 自身存储槽，属于无用信息
+```
