--- a/courses/043 可升级代理模式.md
+++ b/courses/043 可升级代理模式.md
@@ -215,3 +215,6 @@ contract LogicV2 is LogicV1 {
 #### 比喻：
 - 在计算机体系中，"代理合约"相对于"硬盘"，"逻辑合约"相当于"操作系统"
 - 升级"逻辑合约"，相当于升级操作系统，而硬盘（代理合约）中的数据保持不变。
+
+#### 提前预览一下标准代理:
+- ![](../images/proxyMode_Compare.png "")
