--- a/courses/045 透明代理模式.md
+++ b/courses/045 透明代理模式.md
@@ -242,7 +242,7 @@ contract LogicV2 is LogicV1 {
         [TransparentUpgradeableProxy:ERC1967Proxy:Proxy]
             1. 使用高位存储槽，存储 newImplementation（即，逻辑合约地址）
             2. 与逻辑合约共享低位存储槽
-            3. 逻辑fallback转发]
+            3. fallback 转发逻辑
         [ProxyAdmin]
             1. 可自由使用存储槽
             2. 升级逻辑
@@ -253,3 +253,4 @@ contract LogicV2 is LogicV1 {
             2. 定义变量与逻辑
             3. 自身存储槽，属于无用信息
 ```
+- ![](../images/日期/PixPin_20250422_005201.png "")
