--- a/courses/046 通用可升级代理模式.md
+++ b/courses/046 通用可升级代理模式.md
@@ -207,10 +207,6 @@ contract LogicV2 is LogicV1 {
 - 通用可升级代理模式的缺点：更复杂，因为逻辑合约承载了更多功能。
 - 适用：适合资源受限、对升级需求简单的项目，在降低成本的同时提供升级的灵活性。
 
-- ![](../images/proxyMode_Compare.png "")
-- ![](../images/日期/PixPin_20250422_005201.png "")
-- ![](../images/日期/PixPin_20250422_005443.png "")
-
 
 
 #### 通用可升级代理 - ```OpenZeppelin```
@@ -219,7 +215,7 @@ contract LogicV2 is LogicV1 {
         [ERC1967Proxy:Proxy]
             1. 使用高位存储槽，存储 newImplementation（即，逻辑合约地址）
             2. 与逻辑合约共享低位存储槽
-            3. 逻辑fallback转发] 
+            3. fallback 转发逻辑
                     
     逻辑合约：
         [LogicV1:UUPSUpgradeable]
@@ -228,3 +224,4 @@ contract LogicV2 is LogicV1 {
             2. 定义变量与逻辑
             3. 自身存储槽，属于无用信息
 ```
+- ![](../images/日期/PixPin_20250422_005443.png "")
