--- a/courses/045 透明代理模式.md
+++ b/courses/045 透明代理模式.md
@@ -252,5 +252,7 @@ contract LogicV2 is LogicV1 {
             1. 无额外继承关系
             2. 定义变量与逻辑
             3. 自身存储槽，属于无用信息
+            
+    通常情景：一个代理合约 对应着 一个逻辑合约。            
 ```
 - ![](../images/日期/PixPin_20250422_005201.png "")
