--- a/courses/046 通用可升级代理模式.md
+++ b/courses/046 通用可升级代理模式.md
@@ -223,5 +223,7 @@ contract LogicV2 is LogicV1 {
             2. 升级逻辑（从proxy发起，fallback-delegate-implementation，最终把"逻辑合约地址"写入到proxy自身的高位槽）
             2. 定义变量与逻辑
             3. 自身存储槽，属于无用信息
+            
+    通常情景：一个代理合约 对应着 一个逻辑合约。            
 ```
 - ![](../images/日期/PixPin_20250422_005443.png "")
