--- a/courses/045 透明代理模式.md
+++ b/courses/045 透明代理模式.md
@@ -240,9 +240,10 @@ contract LogicV2 is LogicV1 {
 ```
     代理合约：
         [TransparentUpgradeableProxy:ERC1967Proxy:Proxy]
+            0. 合约字节码存储 ProxyAdmin 地址（不会污染低位存储槽）
             1. 使用高位存储槽，存储 newImplementation（即，逻辑合约地址）
             2. 与逻辑合约共享低位存储槽
-            3. fallback 转发逻辑
+            3. fallback 转发逻辑(指向[逻辑合约地址])
         [ProxyAdmin]
             1. 可自由使用存储槽
             2. 升级逻辑
