--- a/courses/046 通用可升级代理模式.md
+++ b/courses/046 通用可升级代理模式.md
@@ -215,7 +215,7 @@ contract LogicV2 is LogicV1 {
         [ERC1967Proxy:Proxy]
             1. 使用高位存储槽，存储 newImplementation（即，逻辑合约地址）
             2. 与逻辑合约共享低位存储槽
-            3. fallback 转发逻辑
+            3. fallback 转发逻辑(指向[逻辑合约地址])
                     
     逻辑合约：
         [LogicV1:UUPSUpgradeable]
