--- a/courses/045 透明代理模式.md
+++ b/courses/045 透明代理模式.md
@@ -240,19 +240,19 @@ contract LogicV2 is LogicV1 {
 ```
     代理合约：
         [TransparentUpgradeableProxy:ERC1967Proxy:Proxy]
-            0. 合约字节码存储 ProxyAdmin 地址（不会污染低位存储槽）
-            1. 使用高位存储槽，存储 newImplementation（即，逻辑合约地址）
-            2. 与逻辑合约共享低位存储槽
-            3. fallback 转发逻辑(指向[逻辑合约地址])
+            . 合约字节码存储 ProxyAdmin 地址（不会污染低位存储槽）
+            . 使用高位存储槽，存储 newImplementation（即，逻辑合约地址）
+            . 与逻辑合约共享低位存储槽
+            . fallback 转发逻辑(指向[逻辑合约地址])
         [ProxyAdmin]
-            1. 可自由使用存储槽
-            2. 升级逻辑
+            . 可自由使用存储槽
+            . 升级逻辑合约
         
     逻辑合约：
         [LogicV1]
-            1. 无额外继承关系
-            2. 定义变量与逻辑
-            3. 自身存储槽，属于无用信息
+            . 无额外继承关系
+            . 定义变量与逻辑
+            . 自身存储槽，属于无用信息
             
     通常情景：一个代理合约 对应着 一个逻辑合约。            
 ```
