--- a/courses/046 通用可升级代理模式.md
+++ b/courses/046 通用可升级代理模式.md
@@ -213,16 +213,16 @@ contract LogicV2 is LogicV1 {
 ```
     代理合约：
         [ERC1967Proxy:Proxy]
-            1. 使用高位存储槽，存储 newImplementation（即，逻辑合约地址）
-            2. 与逻辑合约共享低位存储槽
-            3. fallback 转发逻辑(指向[逻辑合约地址])
+            . 使用高位存储槽，存储 newImplementation（即，逻辑合约地址）
+            . 与逻辑合约共享低位存储槽
+            . fallback 转发逻辑(指向[逻辑合约地址])
                     
     逻辑合约：
         [LogicV1:UUPSUpgradeable]
-            1. 继承自 UUPSUpgradeable
-            2. 升级逻辑（从proxy发起，fallback-delegate-implementation，最终把"逻辑合约地址"写入到proxy自身的高位槽）
-            2. 定义变量与逻辑
-            3. 自身存储槽，属于无用信息
+            . 继承自 UUPSUpgradeable
+            . 升级逻辑合约（从proxy发起，fallback-delegate-implementation，最终把"逻辑合约地址"写入到proxy自身的高位槽）
+            . 定义变量与逻辑
+            . 自身存储槽，属于无用信息
             
     通常情景：一个代理合约 对应着 一个逻辑合约。            
 ```
