--- a/courses/047 信标代理模式.md
+++ b/courses/047 信标代理模式.md
@@ -1,7 +1,7 @@
 #### 概念：
 - 在UniswapV2中，所有的交易对(称为，交易池子)，都存储在一个合约中，称为，交易池子合约。
 - 随着生态的发展，有很多交易池子产生，会面临一个问题：当交易池子合约产生了问题，希望更改迭代，怎么办？
-- 在UniswapV3中，使用了类似于"信标代理"的模式，来解决这个问题。
+- 如果是传统 Swap 项目可能考虑，使用了类似于"信标代理"的模式，来解决这个问题。（Uniswap的V2、V3、V4，没有考虑小版本的DEBUG迭代）
 - 每一个交易池子合约，都是一个代理合约，它们同时指向一个逻辑合约，这样只需要"每一个代理合约"，更改逻辑合约地址，即可。
 - 引入"信标合约"，来存储代理合约所指向的逻辑合约地址，这样当需要更新协议逻辑时，只需要更新信标指向的合约地址，而不需要迁移池合约的地址或重新配置整个系统。
 
@@ -168,3 +168,28 @@ async function main() {
 - 代理合约的存储是独立的，逻辑合约只包含代码逻辑。
 - 升级逻辑合约只是更新了代码逻辑，代理合约仍然通过 delegatecall 调用新的逻辑合约，但数据存储在自己的存储空间中。
 - 信标代理的实现：https://github.com/OpenZeppelin/openzeppelin-contracts/tree/master/contracts/proxy/beacon
+
+　
+
+#### 信标代理 - ```OpenZeppelin```
+```
+    代理合约：
+        [BeaconProxy:Proxy]
+            . 合约字节码存储 信标合约(UpgradeableBeacon) 地址（不会污染低位存储槽）
+            . 与逻辑合约共享低位存储槽
+            . fallback 转发逻辑(指向"[信标合约]存储的[逻辑合约地址]")
+            
+    信标合约：
+        [UpgradeableBeacon:IBeacon]
+            . 不与其他合约共享存储槽
+            . 独立存储(更改) implementation 逻辑合约地址
+            . 升级逻辑合约（即，等同于2）
+            
+    逻辑合约：
+        [LogicV1]
+            . 无额外继承关系
+            . 定义变量与逻辑
+            . 自身存储槽，属于无用信息
+            
+    通常情景：多个代理合约 对应着 1个逻辑合约（由[信标合约]决定，指向哪个[逻辑合约]）。            
+```
