--- a/courses/006 事件.md
+++ b/courses/006 事件.md
@@ -51,3 +51,33 @@ contract MyContract {
 ```
 - 刚刚定义的事件，计算如下：
 - ```375 + 375 * 3 + 8 * 32 = 1756```
+
+#### 事件对应的```ABI```
+- 编译完成后，在```abi```目录对应的```.sol```文件中，找出来（使用```json```解析器）
+```
+   {
+            "type": "event",
+            "name": "Transfer",
+            "inputs": [
+                {
+                    "name": "from",
+                    "type": "address",
+                    "indexed": true,
+                    "internalType": "address"
+                },
+                {
+                    "name": "to",
+                    "type": "address",
+                    "indexed": true,
+                    "internalType": "address"
+                },
+                {
+                    "name": "amount",
+                    "type": "uint256",
+                    "indexed": false,
+                    "internalType": "uint256"
+                }
+            ],
+            "anonymous": false
+   }
+```
