--- a/courses/001 一些常见名词.md
+++ b/courses/001 一些常见名词.md
@@ -81,8 +81,8 @@
 
 **ERC** 
 - 全称 Ethereum Request For Comment：以太坊意见征求稿
-- 用以记录以太坊上应用级的各种开发标准和协议。如典型的Token标准(ERC20, ERC721)、名字注册(ERC26, ERC13), URI范式(ERC67)。
-- EIP包含ERC。
+- 用以记录以太坊上```应用级```的各种开发标准和协议。如典型的Token标准(ERC20, ERC721)、名字注册(ERC26, ERC13), URI范式(ERC67)。
+- EIP包含ERC。EIP 更偏向“基础设施（协议层）”，而 ERC 是“开发工具包（应用层）”。
 
 　
 
