--- a/courses/002 变量与函数.md
+++ b/courses/002 变量与函数.md
@@ -134,12 +134,13 @@ dynamicArray.push(3);
 
 　
 
-#### 映射（mapping）类型细说：
-- 必须存储在storage中
-- 不储存任何键（Key）的资讯，也没有length的资讯，故，不支持迭代或获取键的集合，只能通过键快速访问值
-- 主键只能是值类型（如 uint、address 等），而值可以是任意类型，包括引用类型。
-- 访问mapping的时候，如果"目标主键"不存在，则返回"值"的默认value。不会报错。
-- 使用delete操作符，会把映射值重置为默认值。如，```delete balances[msg.sender];```
+#### 映射（```mapping```）类型细说：
+- 必须存储在```storage```中
+- 不储存任何键（```Key```）的资讯，也没有```length```的资讯，故，不支持迭代或获取键的集合，只能通过键快速访问值
+- 主键只能是值类型（如 ```uint、address``` 等），而值可以是任意类型，包括引用类型。
+- 访问```mapping```的时候，如果"目标主键"不存在，则返回"值"的默认```value```。不会报错。
+- 使用```delete```操作符，会把映射值重置为默认值。如，```delete balances[msg.sender];```
+- 使用```delete```操作符，会触发"退款机制"（删除存储槽（```storage slot```）中的数据后，合约会获得部分```Gas```退款（最高可返还 1/5 的 Gas 成本）。）
 
 　
 
