--- a/others/005 一些对比.md
+++ b/others/005 一些对比.md
@@ -62,3 +62,17 @@
 | **Gas 成本** | 较低（直接修改代币合约状态） | 稍高（需要调用外部 `Permit2` 合约） |
 | **用例** | 简单授权场景（如单个 DeFi 协议） | 复杂场景（如 Uniswap 的批量交易） |
 | **生态支持** | 广泛，但依赖代币实现 | Uniswap 等主流协议推动，逐渐普及 |
+
+### 跨链兑换
+| **分类维度**       | **高频刚需场景**                                                                 | **低频场景**                                                                 |
+|---------------------|---------------------------------------------------------------------------------|-----------------------------------------------------------------------------|
+| **定义**            | 用户为参与目标链功能必须执行的跨链操作                                                  | 用户因资产配置调整或投机需求进行的非必要跨链操作                                         |
+| **典型用例**        | `BTC → WBTC`（参与以太坊DeFi）<br>`ETH主网 → Arbitrum WETH`（Layer2迁移）               | `BTC → ETH`（跨资产投资）<br>`SOL → AVAX`（生态切换）                                |
+| **核心特征**        | • 同资产跨链封装<br>• 目标链功能依赖性强<br>• 1:1锚定兑换                                 | • 跨资产兑换<br>• 依赖市场价格机制<br>• 存在滑点风险                                     |
+| **用户动机**        | 功能性需求（如DeFi、游戏、NFT交互）                                                     | 投机/配置需求                                                                |
+| **主流工具**        | • 专用跨链桥（Multichain）<br>• 官方封装协议（WBTC官网）                                   | • 聚合器（Li.Fi, THORSwap）<br>• CEX（币安跨链充值）                              |
+| **日均交易量**      | 高（WBTC日均跨链量1000-5000 BTC）                                                      | 低（链上占比<10%，多数通过CEX完成）                                               |
+| **风险等级**        | ⚠️ 低（仅Gas费风险）                                                                  | ⚠️⚠️⚠️ 高（价格波动+滑点+合约风险）                                             |
+| **成本构成**        | 固定Gas费                                                                        | Gas费+滑点损耗+协议手续费                                                       |
+| **数据佐证**        | WBTC流通量>20万枚<br>Layer2桥接TVL超$10B                                             | CEX占跨资产交易90%+                                                           |
+| **未来趋势**        | 需求持续增长（多链生态扩张）                                                          | 可能被CCIP等标准化协议优化                                                     |
