--- a/others/005 一些对比.md
+++ b/others/005 一些对比.md
@@ -24,19 +24,19 @@
 | **风险类型**   | 1. 智能合约风险<br>2. 脱锚风险        | 1. 代币波动风险<br>2. 流动性风险    | 1. 协议中心化风险<br>2. Slash风险  |
 
 ### 质押、再质押
-| 对比维度         | 质押 (Staking)                                    | 再质押 (Restaking)                                |
-|------------------|---------------------------------------------------|---------------------------------------------------|
-| **定义**         | 将代币锁定以维护主链安全并获取基础收益              | 将已质押资产（如LSD）二次质押到其他协议获取叠加收益 |
-| **资产状态**     | 原生代币（如ETH）或流动性质押代币（LSD）           | 质押凭证（如stETH）、LP代币或其他衍生品            |
-| **收益结构**     | 单层收益（主链质押奖励，APY 3-5%）                | 双层收益（主链奖励 + 协议补贴，APY可提升2-10%）   |
-| **参与门槛**     | 需32 ETH（独立节点）或任意金额（质押池）           | 需持有质押凭证（如stETH）并连接智能合约            |
-| **安全性贡献**   | 仅服务于主链共识（如以太坊）                      | 扩展至其他协议/链（如DA层、预言机网络）            |
-| **流动性**       | 传统质押锁定资产；LSD可流通（如stETH）             | 多数协议锁定资产，部分支持流动性再质押             |
-| **典型协议**     | Lido、Rocket Pool、交易所质押                      | EigenLayer、Kelp DAO、Babylon                     |
-| **主要风险**     | Slash罚没、市场波动                                | 智能合约漏洞、叠加Slash风险、协议代币贬值          |
-| **资本效率**     | 1倍利用率                                         | N倍利用率（多协议复用安全性）                     |
-| **操作复杂度**   | 中（需节点运维或选择质押池）                      | 高（需管理多协议交互和风险对冲）                  |
-| **创新性**       | 基础共识层                                        | 模块化区块链的安全共享经济                        |
+| 对比维度         | 质押 (Staking)                                    | 重新质押 (Re-staking)             |
+|------------------|---------------------------------------------------|-------------------------------|
+| **定义**         | 将代币锁定以维护主链安全并获取基础收益              | 将已质押资产（如LSD）二次质押到其他协议获取叠加收益   |
+| **资产状态**     | 原生代币（如ETH）或流动性质押代币（LSD）           | 质押凭证（如stETH）、LP代币或其他衍生品       |
+| **收益结构**     | 单层收益（主链质押奖励，APY 3-5%）                | 双层收益（主链奖励 + 协议补贴，APY可提升2-10%） |
+| **参与门槛**     | 需32 ETH（独立节点）或任意金额（质押池）           | 需持有质押凭证（如stETH）并连接智能合约        |
+| **安全性贡献**   | 仅服务于主链共识（如以太坊）                      | 扩展至其他协议/链（如DA层、预言机网络）         |
+| **流动性**       | 传统质押锁定资产；LSD可流通（如stETH）             | 多数协议锁定资产，部分支持流动性再质押           |
+| **典型协议**     | Lido、Rocket Pool、交易所质押                      | EigenLayer、Kelp DAO、Babylon   |
+| **主要风险**     | Slash罚没、市场波动                                | 智能合约漏洞、叠加Slash风险、协议代币贬值       |
+| **资本效率**     | 1倍利用率                                         | N倍利用率（多协议复用安全性）               |
+| **操作复杂度**   | 中（需节点运维或选择质押池）                      | 高（需管理多协议交互和风险对冲）              |
+| **创新性**       | 基础共识层                                        | 模块化区块链的安全共享经济                 |
 
 ### ```UniswapV2、Sushiswap```
 | 对比维度          | Uniswap V2 (2020年5月发布)                | Sushiswap (2020年8月发布)               |
